--- a/app/styles/_modules.scss
+++ b/app/styles/_modules.scss
@@ -1,35 +1,183 @@
 body {
   margin: 0;
-  width: 100%;
+  font-family: Verdana;
+  background-position: top center;
   background-image: url("../assets/images/background.jpg");
 }
 .container {
-  h1, h2, li{
+  width: 100%;
+  margin: 0 auto;
+  @media screen and (min-width: 1024px) {
+    max-width: 1024px;
+  }
+  header {
     color: white;
-    display: inline-block;
-
-
+  }
+  .top-header {
+    margin: 10px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  h1 {
+    margin: 0;
+    padding: 0;
+    font-weight: bold;
   }
   input {
-    margin-left: 50px;
     border-radius: 5px;
     border-style: none;
-    padding: 10px 0;
-    text-align: center;
-    width: 80px;
+    padding: 8px 10px;
+
+    @media screen and (min-width: 650px) {
+      display: inline;
+    }
   }
   h2 {
+    margin: 0;
+    padding: 0;
     font-size: 1rem;
     font-style: italic;
-    float: left;
+    font-family: Verdana;
+    font-style: italic;
   }
   .nav {
-    display: inline-block;
-    background-color: gray;
-    width: 300px;
-    margin: 40px 10px;
-    border-radius: 10px;
-    
+    display: flex;
+    border-radius: 8px;
+    color: white;
+    font-size: 0.9rem;
+    margin: 20px 0 0;
+    justify-content: space-between;
+  }
+  .nav-bar {
+    background: linear-gradient(to right, #6a6a6a, #b9b9b9);
+    border-radius: 8px;
+  }
+  ul {
+    padding-left: 20px;
+    li {
+      display: inline-block;
+      margin: 10px 10px 10px 0;
+      color: white;
+      font-family: Verdana;
+      font-weight: bold;
 
+    }
+  }
+  .post {
+    background-color: white;
+    border-radius: 8px;
+    margin: 20px 0 0;
+    @media screen and (min-width: 650px) {
+      width: calc(70% - 2%);
+      margin-right: 2%;
+      float: left;
+    }
+    .container {
+      width: 94%;
+    }
+    &--title {
+      margin: 0;
+      font-size: 1.8rem;
+      padding: 10px 0;
+    }
+    &--info {
+      margin: 10px 0;
+      padding: 0;
+      font-size: 0.9rem;
+      font-family: Verdana;
+      font-weight: normal;
+      color: #6a6a6a;
+      &-seperator {
+        font-style: italic;
+      }
+      &-category {
+        color: #4F76CC;
+        font-family: Verdana;
+        text-decoration: none;
+      }
+    }
+    &--image {
+      width: 100%;
+    }
+    &--content {
+      font-size: 0.9rem;
+      line-height: 1.5;
+      font-weight: 400;
+      padding: 0 0 20px;
+    }
+  }
+  .sidebar {
+    margin: 20px 0 0;
+    background-color: white;
+    border-radius: 8px;
+    @media screen and (min-width: 650px) {
+      width: 30%;
+      float: left;
+    }
+    .container {
+      padding: 5px 0 20px;
+    }
+    &--title {
+      margin-left: 10px;
+      padding: 10px 0;
+    }
+    &--option {
+      border-top: 1px solid #ddd;
+      padding: 10px 0;
+      a {
+        color: #2973CB;
+        text-decoration: none;
+        font-family: Verdana;
+        font-weight: 600;
+      }
+      span {
+        color: #666;
+      }
+    }
+  }
+  .photos {
+    margin: 20px 0 0;
+    background-color: white;
+    border-radius: 8px;
+    overflow: hidden;
+    zoom: 1;
+    @media screen and (min-width: 650px) {
+      width: 30%;
+      float: left;
+    }
+    .container {
+      padding: 5px 0;
+    }
+    &--title {
+      margin-left: 10px;
+      padding: 10px 0;
+    }
+    &--photo {
+      width: calc(20% - 4%);
+      margin: 10px 5% 0 0;
+      float: left;
+      &:last-child {
+        padding: 0 0 20px;
+      }
+      &:nth-child(5n) {
+        margin-right: 5px;
+      }
+      img {
+        width: 100%;
+      }
+    }
+  }
+  footer {
+    color: #fff;
+    text-shadow: 1px 1px 1px #666;
+    font-weight: 200;
+    clear: both;
+    @media screen and (min-width: 650px) {
+      padding: 10px 0 0;
+    }
+    .container {
+      margin: 20px 0 30px;
+    }
   }
 }
